# LlamaEdgeAgent

./: .gitignore  Cargo.toml  llama-agent.wasm  tmp.json
.cargo/: config.toml
agent/: Cargo.toml
agent/.cargo/: config.toml
agent/src/: alt_chat_completions.rs  exec_python.rs  immutable_agent.rs  lib.rs  main.rs  nous_structs.rs  utils.rs  webscraper_hook.rs
llama-core/: Cargo.toml
llama-core/src/: chat.rs
src/: exec_python.rs  lib.rs  llama_structs.rs  llm_llama_local.rs  main.rs
